<resources>
    <string name="search_by_id">Search</string>
    <string name="send_succ">Sent successfully</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="send">Send</string>
    <string name="network_unavailable_tips">Please check if the network is available！</string>
    <string name="group_notice">group notification</string>
    <string name="apply__join">Applications for Membership</string>
    <string name="reason">Reason for applying：</string>
    <string name="agree">agree</string>
    <string name="agreeed">agreed</string>
    <string name="album">Album</string>
    <string name="shoot">Shoot</string>
    <string name="name_card">Name card</string>
    <string name="camera_punch_failed">Camera failed to open</string>
    <string name="camera_permission_failed">Could not get camera permission</string>
    <string name="file">file</string>
    <string name="document">document</string>
    <string name="new_friend_request">new friend request</string>
    <string name="hil">greet</string>
    <string name="create_group">Create new group</string>
    <string name="create_group_tips">Take a group name to facilitate subsequent searches</string>
    <string name="please_enter_code">Please enter the 6 digit code</string>
    <string name="id_number">ID Number</string>
    <string name="send_msg">Send a message</string>
    <string name="add_friend">Add friend</string>
    <string name="Verify">Verify</string>
    <string name="read">Read</string>
    <string name="un_read">Unread</string>
    <string name="select">Select</string>
    <string name="share">Share</string>
    <string name="forward">Forward</string>
    <string name="revoke">Revoke</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="the_image">the image</string>
    <string name="the_video">the video</string>
    <string name="delete_confirmation_message">Are you sure to delete %s?</string>
    <string name="me">Me</string>
    <string name="my_information">My Information</string>
    <string name="avatar">Profile Photo</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="qr_code">QR Code</string>
    <string name="id_code">ID Code</string>
    <string name="accounts_settings">Account Settings</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="language">Language</string>
    <string name="version_update">Version Update</string>
    <string name="app_version_sdk">App v1.0.0.12/ SDK v2.1.1.10</string>
    <string name="set_nickname">Set Nickname</string>
    <string name="no_special_characters">No symbols or special characters allowed</string>
    <string name="follow_the_system">Follow the System</string>
    <string name="english">English</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="search_for_id_heading">Search for the ID number and add me immediately</string>
    <string name="new_version_found_heading">New version found</string>
    <string name="ignore">Ignore</string>
    <string name="later">Later</string>
    <string name="immediately">Immediately</string>
    <string name="release_notes_heading">Release Notes:</string>
    <string name="update">Update</string>
    <string name="nickname_hint">Please enter your nickname</string>
    <string name="submit">Submit</string>
    <string name="gender_select">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trademark">ByteChat \n Copyright © 2021–2022 ByteChat. All rights reserved</string>
    <string name="qr_scan">Scan the QR code to add me as friend</string>
    <string name="signout_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="signout_heading">Sign Out</string>
    <string name="signout_subheading">Are you sure to Sign Out?</string>
    <string name="contact_heading">Contacts</string>
    <string name="new_friends_heading">New friends</string>
    <string name="new_groups_heading">New groups</string>
    <string name="my_friends_heading">My friends</string>
    <string name="my_groups_heading">My groups</string>
    <string name="tags_heading">Tags</string>
    <string name="freq_contacts_heading">Frequent contacts</string>
    <string name="add">Add</string>
    <string name="create_join_heading">Create and join group chats</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="create_group_chat_description">Create group chats and fully use ByteChat</string>
    <string name="join_group_chat">Join group chat</string>
    <string name="join_group_chat_description">Communicate and collaborate with members</string>
    <string name="add_friend_heading">Add friend</string>
    <string name="search">Search</string>
    <string name="search_description">Search and add by user ID number</string>
    <string name="scan">Scan</string>
    <string name="scan_description">Scan the QR Code</string>
    <string name="hint_text">Please enter friend ID</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="people_may_know">People you may know</string>
    <string name="invite_to_bytechat">Invite to ByteChat</string>
    <string name="invite_to_bytechat_msg">Invite friends to ByteChat</string>
    <string name="my_requests">My requests</string>
    <string name="request_sent">Request sent</string>
    <string name="new_friend">New friend</string>
    <string name="new_group">New group</string>
    <string name="hint_text_group">Please enter group ID</string>
    <string name="i_create">I create</string>
    <string name="i_created">I created</string>
    <string name="i_join">I join</string>
    <string name="i_joined">I joined</string>
    <string name="new_tag">New Tag</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_member">Tag member</string>
    <string name="finished">Finished</string>
    <string name="tag_name_hint">Please enter a tag name</string>
    <string name="lang_change_msg">Are you sure to change the language?</string>
    <string name="discover_heading">Discover</string>
    <string name="all">All</string>
    <string name="contacts">Contacts</string>
    <string name="group">Group</string>
    <string name="chat_history">Chat History</string>
    <string name="no_result">No more search results</string>
    <string name="files">File</string>
    <string name="no_more_search_results">No More Search Results</string>
    <string-array name="array_search">
        <item>@string/all</item>
        <item>@string/contacts</item>
        <item>@string/group</item>
        <item>@string/chat_history</item>
        <item>@string/files</item>
    </string-array>
    <string name="bytechat">ByteChat</string>
    <string name="bytechat_scan">Scan</string>
    <string name="bytechat_add_friend">Add friend</string>
    <string name="bytechat_add_group">Add group</string>
    <string name="bytechat_create_group">Create group</string>
    <string name="makes_your_data_more_secure">Makes your data more secure</string>
    <string name="pin">Pin</string>
    <string name="un_pin">Unpin</string>
    <string name="settings">Settings</string>
    <string name="find_chat_history">Find chat history</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>
    <string name="burn_after_reading">Burn after reading</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="no_disturb">No disturb</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="id_copied">ID copied</string>
    <string name="group_members">Group members</string>
    <string name="nickname_in_group">Nickname in group</string>
    <string name="group_announcement">Group announcement</string>
    <string name="group_qr_code">Group QR code</string>
    <string name="group_id_number">Group ID number</string>
    <string name="view_chat_history">View chat history</string>
    <string name="chat_on_top">Chat on top</string>
    <string name="exit_group">Exit group</string>
    <string name="members"> members</string>
    <string name="dissolve_group">Dissolve Group</string>
    <string name="removed_ban_successfully">Removed Ban Successfully</string>
    <string name="banned_successfully">Banned Successfully</string>
    <string name="transfer_ownership_correct">Transfer the group owner successfully</string>
    <string name="made_admin_correct">Made Admin successfully</string>
    <string name="remove_admin_correct">Removed Admin successfully</string>
    <string name="remove_user_correct">Removed Successfully</string>
    <string name="group_owner">Group owner</string>
    <string name="admin">Admin</string>
    <string name="all_ban">All ban</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="please_enter_group_name">Please enter group name</string>
    <string name="please_enter_group_description">Please enter group description</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="make_the_member_an_admin_question">Are you sure to make the member an Admin?</string>
    <string name="remove_the_member_as_admin_quesiton">Are you sure to remove the member as Admin</string>
    <string name="remove_the_member_ban_quesiton">Are you sure to remove the member ban?</string>
    <string name="transfer_group_owner_quesiton">Are you sure to transfer group owner?</string>
    <string name="remove_the_member_quesiton">Are you sure to remove the member from the group?</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_12_hours">12 hours</string>
<string name="_1_day">1 day</string>
    <string name="customize">Customize</string>
    <string name="second">Second</string>
    <string name="sec">\ sec</string>
    <string name="enter">Enter</string>
    <string name="ban">Ban</string>
    <string name="group_dismissed">Group Dismissed</string>
    <string name="nick_name_updated">Nick Name updated!</string>
    <string name="chat_history_cleared">Chat History Cleared</string>
    <string name="exited_group_successfully">Exited Group successfully</string>
    <string name="group_announcement_done">Group Announcement done!</string>
    <string name="group_information_updated">Group Information updated!</string>
    <string name="please_enter_nickname_in_group">Please enter nickname in group</string>
    <string name="please_enter_announcement">Please enter announcement</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_transfer_group_owner">Are you sure to transfer group owner?</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_album">Choose from album</string>
    <string name="choose_default_photo">Choose default photo</string>
    <string name="save_photo">Save photo</string>
    <string name="delete_photo">Delete</string>
</resources>