<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/add_friend_bg_top_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/banTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ban"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/about_close"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/banTitle"
            app:layout_constraintStart_toStartOf="parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"/>

        <TextView
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_minutes"
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"/>
        <TextView
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_hour"
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"/>
        <TextView
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_12_hours"
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fafafa"/>
        <TextView
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_day"
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="10dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_grey_curve"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTop">

        <TextView
            android:id="@+id/txt_customize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customize"
            android:textColor="#003333"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/editText_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/second"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/background_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_customize"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:background="@drawable/background_btn_blue_gradient_20"
            android:elevation="4dp"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/editText_seconds"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
