<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/outer_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayout"
    android:background="@drawable/search_text_background"
    android:elevation="4dp"
    android:layout_margin="8dp"
    android:padding="8dp">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="copy,delete,reply,revoke,forward,share,select"
        app:flow_horizontalAlign="start"
        app:flow_horizontalBias="0"
        app:flow_maxElementsWrap="6"
        app:flow_verticalBias="0"
        app:flow_verticalGap="16dp"
        app:flow_horizontalGap="16dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/copy"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_copy_btn_icon"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_delete_btn_icon"
        android:fontFamily="@font/arial"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/copy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_reply_btn_icon"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/reply"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/revoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_revoke_btn_icon"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/revoke"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reply"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_forward_btn_icon"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/forward"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_share_btn_icon_2"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableTop="@mipmap/chattool_multi_sel_btn_icon"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arial"
        android:text="@string/select"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
