<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/pingfang_sc_regular"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/are_you_sure_to_transfer_group_owner"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/ll_sign_out_bottom"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:weightSum="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:fontFamily="@font/pingfang_sc_regular"
                android:text="@string/signout_cancel"
                android:background="#F0F0F0"
                android:textColor="#666666"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:fontFamily="@font/pingfang_sc_regular"
                android:text="@string/yes"
                android:background="#FD6969"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
